[package]
name = "rustask"
version = "0.9.0"
edition = "2018"
authors = ["BSDinis <baltasardinis@hotmail.com>"]
repository = 'https://github.com/bsdinis/rustask'
license = "MIT"
description = """
Rustask, a simple CLI task manager
"""
readme = "README.md"

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
chrono      = { version = "0.4", features = ["serde"] }
colored     = "1.9"
rand        = "0.7"
clap        = "2.33"

eyre        = "0.6"
color-eyre  = "0.5"
thiserror   = "1.0"

[[bin]]
name = "rustask"
