[package]
name = "rustask"
version = "0.9.2"
edition = "2021"
authors = ["BSDinis <baltasardinis@hotmail.com>"]
repository = 'https://github.com/bsdinis/rustask'
license = "MIT"
description = """
Rustask, a simple CLI task manager
"""
readme = "README.md"

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
chrono      = { version = "0.4", features = ["serde"] }
colored     = "2.0"
rand        = "0.8"
clap        = "3.2"

eyre        = "0.6"
color-eyre  = "0.6"
thiserror   = "1.0"

[[bin]]
name = "rustask"
